[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Hitachi HD44780 support for STM32"
repository = "https://github.com/idubrov/lcd"
name = "lcd"
version = "0.1.1"
license = "MIT OR Apache-2.0"

[dependencies.fast_fmt]
optional = true
default-features = false
features = []
version = "0.1.3"

[features]
default = []
fast-format = ["fast_fmt"]
