[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
keywords = ["lcd", "hd44780"]
description = "Hitachi HD44780-compatible LCD screen support for embedded development"
repository = "https://github.com/idubrov/lcd"
name = "lcd"
version = "0.4.0-alpha.0"
license = "MIT/Apache-2.0"
readme = "README.md"

[package.metadata.release]
pre-release-hook = "./update-readme.sh"

[dependencies.fast_fmt]
optional = true
default-features = false
features = []
version = "0.1.3"

[dev-dependencies.pretty_assertions]
version = "0.3.4"

[features]
default = []
fast-format = ["fast_fmt"]
