[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
keywords = ["lcd", "hd44780"]
description = "Hitachi HD44780-compatible LCD screen support for embedded development"
repository = "https://github.com/idubrov/lcd"
name = "lcd"
version = "0.4.1-alpha.0"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-hook = "./update-readme.sh"

[dev-dependencies]
pretty_assertions = "1.0.0"
